--- a/browser/board.html
+++ b/browser/board.html
@@ -29,7 +29,7 @@
 				<div class="bg">
 					<p>I</p>
 				</div>
-				<p>Инвентарь
+				<p>Inventory
 			</p>
 <span>54</span>
 </div>
@@ -39,59 +39,59 @@
 				<img src="./assets/img/hum.svg">
 				<div class="items1">
 					<div class="item1"></div>
-					<p>Головной Убор</p>
+					<p>Headdress</p>
 				</div>
 				<div class="items2">
 					<div class="item2"></div>
-					<p>Маска</p>
+					<p>Mask</p>
 				</div>
 				<div class="items3">
 					<div class="item3"></div>
-					<p>Очки</p>
+					<p>Glasses</p>
 				</div>
 				<div class="items4">
 					<div class="item4"></div>
-					<p>Шея</p>
+					<p>Neck</p>
 				</div>
 				<div class="items5">
 					<div class="item5"></div>
-					<p>Бронежилет</p>
+					<p>Vest</p>
 				</div>
 				<div class="items6">
 					<div class="item6"></div>
-					<p>Серьги</p>
+					<p>Earrings</p>
 				</div>
 				<div class="items7">
 					<div class="item7"></div>
-					<p>Куртка</p>
+					<p>Jacket</p>
 				</div>
 				<div class="items8">
 					<div class="item8"></div>
-					<p>Рюкзак</p>
+					<p>Backpack</p>
 				</div>
 				<div class="items9">
 					<div class="item9"></div>
-					<p>Перчатки</p>
+					<p>Gloves</p>
 				</div>
 				<div class="items10">
 					<div class="item10"></div>
-					<p>Футболка</p>
+					<p>T-shirt</p>
 				</div>
 				<div class="items11">
 					<div class="item11"></div>
-					<p>Часы</p>
+					<p>Watch</p>
 				</div>
 				<div class="items12">
 					<div class="item12"></div>
-					<p>Штаны</p>
+					<p>Pants</p>
 				</div>
 				<div class="items13">
 					<div class="item13"></div>
-					<p>Ботинки</p>
+					<p>Shoes</p>
 				</div>
 			</div>
 			<div class="bust">
-				<p>Оружие</p>
+				<p>Gun</p>
 				<div class="list">
 					<div class="slot1">
 						<div class="item1">
@@ -118,7 +118,7 @@
 		</div>
 		<div class="center droppable" data-action="1" data-type="inv">
 			<div class="huminv">
-				<h1>Инвентарь</h1>
+				<h1>Inventory</h1>
 				<div class="items">
 					<!-- <div class="item">
 						<img src="img/-12.png">
@@ -138,8 +138,8 @@
 				</div>
 			</div>
 			<div class="bpinv">
-				<h1>Сумка</h1>
-				<p>Продвинутый тип</p>
+				<h1>Bag</h1>
+				<p>Advanced type</p>
 				<p style="color:#fff;font-weight: 800;">2/25</p>
 				<div class="items">
 					<div class="item">
@@ -150,52 +150,52 @@
 <div class="item">
 						<img src="./assets/images/icons/items/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div>
 <div class="item">
 						<img src="./assets/images/icons/items/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div>
 <div class="item">
 						<img src="./assets/images/icons/items/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div>
 <div class="item">
 						<img src="./assets/images/icons/items/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div>
 <div class="item">
 						<img src="./assets/images/icons/items/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div>
 <div class="item">
 						<img src="./assets/images/icons/items/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div>
 <div class="item">
 						<img src="./assets/images/icons/items/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div>
 <div class="item">
 						<img src="./assets/images/icons/items/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div>
 <div class="item">
 						<img src="./assets/images/icons/items/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div>
 <div class="item">
 						<img src="./assets/images/icons/items/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div>
 
 				</div>
@@ -203,13 +203,13 @@
 		</div>
 		<div class="right droppable" v-show="outside" data-action="2" data-type="out">
 			<div class="dopinv">
-				<h1>Внешний Инвентарь</h1>
+				<h1>External Inventory</h1>
 				<p>{{outHead}}</p>
 				<div class="items">
 					<!-- <div class="item">
 						<img src="img/-12.png">
 						<p>Name</p>
-						<span>100шт</span>
+						<span>100pcs</span>
 					</div> -->
 					<item
 						v-for="(item, index) in outitems"
@@ -260,8 +260,8 @@
 		<div class="header"><div class="text">{{name}}</div><div class="clos" v-on:click="hide">X</div></div>
 		<div class="box">{{subtext}}</div>
 		<div class="button">
-			<div class="btns use" v-on:click="btn(1)">Использ</div><div class="btns" v-if="type" v-on:click="btn(2)">Передать</div>
-			<div class="btns" v-if="!type" v-on:click="btn(3)">Взять</div><div class="btns" v-on:click="btn(4)">Выбросить</div>
+			<div class="btns use" v-on:click="btn(1)">Use</div><div class="btns" v-if="type" v-on:click="btn(2)">Give</div>
+			<div class="btns" v-if="!type" v-on:click="btn(3)">Pick up</div><div class="btns" v-on:click="btn(4)">Drop</div>
 		</div>	
 	</div>
 	<link rel="stylesheet" href="./assets/css/info.css">
