--- a/browser/color.html
+++ b/browser/color.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
 </head>
 <body style="opacity: 0">
     <div id="window" class="color-picker-panel">
-        <h2 class="panel-header top">Выберите цвет</h2>
+        <h2 class="panel-header top">Choose colour</h2>
         <div class="panel-row">
             <div class="swatches default-swatches"></div>
             <button id="color-indicator" class="button preview"></button>
@@ -46,10 +46,10 @@
         </div>
         <!---<div class="panel-row">
             <button onclick="apply()" class="button swatch">
-                <span>Применить цвет</span>
+                <span>Use colour</span>
             </button>
             <button onclick="cancel()" class="button swatch">
-                <span>Отмена</span>
+                <span>Cancel</span>
             </button>
         </div>--->
     </div>
